填加第一个页面，新建了一个.vue文件，主要涉及样式和图片等静态资源的导入

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>webstorm_vue-cli_webpack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta content="telephone=no" name="format-detection" />
+    <meta http-equiv="Expires" content="-1">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta name="browsermode" content="application">
+    <meta name="x5-page-mode" content="app">
+    <meta name="msapplication-tap-highlight" content="no">
+    <title>Open</title>
+
   </head>
   <body>
     <div id="app"></div>
